<resources>

    <string name="app_name">NeonApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="about">About</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="message">Message</string>
    <string name="Message">Message: </string>
    <string name="Size">Size: </string>
    <string name="Color">Color: </string>
    <string-array name="user_color">
        <item>Red</item>
        <item>Teal</item>
        <item>Pink</item>
        <item>Yellow</item>
        <item>Purple</item>
    </string-array>
    <string name="PickColor">Please pick a color</string>
    <string name="confirm">Confirm Color</string>
    <string name="Blink">Blink</string>
    <string name="bold">Bold</string>
    <string name="message_hint">Enter a message</string>
    <string name="size_hint">Enter a size</string>
    <string name="move">Move</string>
    <string name="button">Create a Sign</string>
    <string-array name="move_speed">
        <item>No</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

</resources>